--- a/nodejs/tossAPI/views/index.ejs
+++ b/nodejs/tossAPI/views/index.ejs
@@ -17,6 +17,7 @@
     <input type = "hidden" id="seller" value = "<%= seller %>">
     <input type = "hidden" id="price" value = "<%= price %>">
     <input type = "hidden" id="name" value = "<%= name %>">
+    <input type="hidden" id="orderid" value = "<%= orderid %>">
 
     <script>
     
@@ -26,13 +27,15 @@
     var seller = document.getElementById('seller').value;
     var price = document.getElementById('price').value;
     var name = document.getElementById('name').value;
+    var orderid = document.getElementById('orderid').value;
 
     var button = document.getElementById('pay-button');
         
     button.addEventListener('click', function() {
         tossPayments.requestPayment('카드',{
+            // method: '카드',
             amount: price,
-            orderId: 'AD8aZDpbzXs4EQa-UkIX6',
+            orderId: orderid,
             orderName: name,
             customerName: seller,
             successUrl: 'http://localhost:4000/success',
