--- a/nodejs/Board/views/register.ejs
+++ b/nodejs/Board/views/register.ejs
@@ -4,11 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Document</title>
 </head>
 <body>
-    <p>ID : <input type="email" name="email">
-    <button>중복체크</button></p>
-    <p>Password : <input type="password" name="password"></p>
+    <form action="/register" method="post">
+        <p>아이디 : <input id = "email" type="email" name="email">
+        <button type = "button" onclick = "duplicateCheck()">중복체크</button></p>
+        <p>비밀번호 : <input type="password" name="password"></p>
+        <p>비밀번호 확인 : <input type="password" name="check_password"></p>
+        <p>이름 : <input type="text" name="name"></p>
+        <p>전화번호 : <input type="text" name="phone_number"></p>
+        <p>닉네임 : <input type="text" name="nickname"></p>
+        <input type="submit" value="전송">
+    </form>
+
+    <script>
+        async function duplicateCheck() {
+            email = document.getElementById('email').value;
+
+            await axios.post("http://localhost:4000/register/duplicateCheck", {    
+                email : email
+            })
+        .then(response => console.log(response.data))
+        }
+    </script>
+
 </body>
 </html>
