게시판 구현중

--- a/nodejs/Board/views/main.ejs
+++ b/nodejs/Board/views/main.ejs
@@ -10,6 +10,12 @@
     <title>Main</title>
 </head>
 <body>
+    <% if (id) { %>
     <%= id %>님이 로그인 중!
+    <a href="/logout">로그아웃</a>
+    <% } else { %>
+        로그인이 필요합니다!
+        <a href="/login">로그인</a>
+    <% } %>
 </body>
 </html>
