--- a/nodejs/Board/views/register.ejs
+++ b/nodejs/Board/views/register.ejs
@@ -26,7 +26,7 @@
             await axios.post("http://localhost:4000/register/duplicateCheck", {    
                 email : email
             })
-        .then(response => console.log(response.data))
+        .then(response => alert(response.data))
         }
     </script>
 
