게시글 목록, 생성, 삭제 구현

--- a/nodejs/Board/views/list.ejs
+++ b/nodejs/Board/views/list.ejs
@@ -24,12 +24,13 @@
         <tr>
             <td><%=data.id%></td>
             <td><%=name.nickname%></td>
-            <!-- <td><a href="/board/read/<%=data.idx%>"><%=data.title%></a></td> -->
-            <td><%=data.subject%></td>
+            <td><a href="/board/<%=data.id%>"><%=data.subject%></a></td>
             <td><%=data.content%></td>
             <td><%=data.createdAt%></td>
         </tr>
         <%}%>
     </table>
+    <a href="/board/register">글 등록</a>
+    <a href="/main">홈</a>
     </body>
 </html>
