--- a/nodejs/Board/views/main.ejs
+++ b/nodejs/Board/views/main.ejs
@@ -13,6 +13,7 @@
     <% if (id) { %>
     <%= id %>님이 로그인 중!
     <a href="/logout">로그아웃</a>
+    <a href="/board/list">게시판</a>
     <% } else { %>
         로그인이 필요합니다!
         <a href="/login">로그인</a>
