스토리지 서버연동 및 프로필 이미지 구현

--- a/nodejs/Board/views/content.ejs
+++ b/nodejs/Board/views/content.ejs
@@ -16,5 +16,7 @@
     <form action="/board/<%=post.id%>/delete">
         <button>삭제</button>
     </form>
+
+    <img src="/uploads/짱구사진.jpg" alt="짱구사진">
 </body>
 </html>
